--- a/index.html
+++ b/index.html
@@ -114,3 +114,83 @@
     <script src="app.js"></script>
   </body>
 </html>
+            </section>
+
+            <section class="workout-list">
+              <article class="workout-card glass">
+                <div class="date-pill">
+                  <span>MAR</span>
+                  <strong>18</strong>
+                </div>
+                <div class="workout-content">
+                  <h4>Upper Strength</h4>
+                  <p>4x Panca inclinata · 3x Trazioni · 3x Curl</p>
+                </div>
+                <span class="duration">71 min</span>
+              </article>
+
+              <article class="workout-card glass">
+                <div class="date-pill">
+                  <span>DOM</span>
+                  <strong>16</strong>
+                </div>
+                <div class="workout-content">
+                  <h4>Lower Day</h4>
+                  <p>4x Squat · 3x Leg curl · 3x Calf raise</p>
+                </div>
+                <span class="duration">63 min</span>
+              </article>
+            </section>
+          </section>
+
+          <aside class="secondary-column">
+            <section class="section-header">
+              <h3>Impostazioni intelligenti</h3>
+            </section>
+
+            <section class="settings-grid">
+              <label class="setting-card glass">
+                <div>
+                  <h4>Timer recupero automatico</h4>
+                  <p class="muted">Parte da solo dopo ogni serie</p>
+                </div>
+                <input type="checkbox" checked />
+              </label>
+
+              <label class="setting-card glass">
+                <div>
+                  <h4>Progressive overload</h4>
+                  <p class="muted">Suggerisci +2.5kg al prossimo allenamento</p>
+                </div>
+                <input type="checkbox" checked />
+              </label>
+
+              <label class="setting-card glass">
+                <div>
+                  <h4>Modalità focus</h4>
+                  <p class="muted">Interfaccia pulita durante il workout</p>
+                </div>
+                <input type="checkbox" />
+              </label>
+
+              <article class="quick-card glass">
+                <h4>Azioni rapide</h4>
+                <p class="muted">Template Push/Pull/Legs · cronometro round · note workout</p>
+              </article>
+            </section>
+          </aside>
+        </main>
+
+        <nav class="tabbar glass" aria-label="Navigazione principale">
+          <button class="tab active">Registra</button>
+          <button class="tab">Programmi</button>
+          <button class="tab">Statistiche</button>
+        </nav>
+
+        <button class="fab" aria-label="Nuovo allenamento">＋</button>
+      </div>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
+</html>
